--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.1",
     "@nestjs/swagger": "^6.3.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "mongoose": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
